--- a/.env
+++ b/.env
@@ -12,3 +12,9 @@ VITE_APP_URL=http://localhost:8801
 
 # 如果端口被占用会直接退出，而不是尝试下一个端口
 VITE_STRICT_PORT=false
+
+# 是否在打包时使用cdn替换本地库 替换 true 不替换 false
+VITE_CDN=false
+
+# 是否启用gzip压缩
+VITE_COMPRESSION=gzip
