--- a/.env.development
+++ b/.env.development
@@ -9,3 +9,6 @@ VITE_APP_URL=http://localhost:8801
 
 # 如果端口被占用会直接退出，而不是尝试下一个端口
 VITE_STRICT_PORT=false
+
+# 是否在打包时使用cdn替换本地库 替换 true 不替换 false
+VITE_CDN=gzip
