--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "rimraf dist && NODE_OPTIONS=--max-old-space-size=8192 vite build && generate-version-file",
-    "preview": "vite preview"
+    "build": "vite build",
+    "preview": "vite preview",
+    "report": "rimraf dist && vite build"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
+    "@vitejs/plugin-vue-jsx": "^4.1.1",
     "animate.css": "^4.1.1",
     "axios": "^1.7.9",
+    "boxen": "^8.0.1",
     "dayjs": "^1.11.13",
     "echarts": "^5.5.1",
     "eslint": "^9.9.1",
@@ -18,13 +23,19 @@
     "eslint-define-config": "^2.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.27.0",
+    "gradient-string": "^3.0.0",
     "js-cookie": "^3.0.5",
     "list": "^2.0.19",
     "pinia": "^2.3.1",
     "pinia-plugin-persistedstate": "^3.2.3",
     "prettier": "^3.3.3",
     "rimraf": "^5.0.10",
+    "rollup-plugin-visualizer": "^5.14.0",
     "sass": "^1.77.8",
+    "terser": "^5.39.0",
+    "vite-plugin-cdn-import": "^1.0.1",
+    "vite-plugin-remove-console": "^2.2.0",
+    "vite-plugin-vue-inspector": "^5.3.1",
     "vue": "^3.5.13",
     "vue-router": "^4.4.3",
     "vue-types": "^6.0.0"
@@ -34,6 +45,25 @@
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.7.2",
     "vite": "^6.1.0",
+    "vite-plugin-compression": "^0.5.1",
     "vue-tsc": "^2.2.0"
+  },
+  "engines": {
+    "node": "^18.18.0 || ^20.9.0 || >=21.1.0",
+    "pnpm": ">=8.6.10"
+  },
+  "pnpm": {
+    "allowedDeprecatedVersions": {
+      "sourcemap-codec": "*",
+      "domexception": "*",
+      "w3c-hr-time": "*",
+      "stable": "*",
+      "abab": "*"
+    },
+    "peerDependencyRules": {
+      "allowedVersions": {
+        "eslint": "9"
+      }
+    }
   }
 }
