--- a/.env.development
+++ b/.env.development
@@ -11,4 +11,7 @@ VITE_APP_URL=http://localhost:8801
 VITE_STRICT_PORT=false
 
 # 是否在打包时使用cdn替换本地库 替换 true 不替换 false
-VITE_CDN=gzip
+VITE_CDN=false
+
+# 是否启用gzip压缩
+VITE_COMPRESSION=gzip
