--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 # 平台本地运行端口号
-VITE_PORT=8888
+VITE_PORT=8800
 
 # 开发环境读取配置文件路径
 VITE_PUBLIC_PATH=/
@@ -11,4 +11,7 @@ VITE_APP_URL=http://localhost:8000
 VITE_STRICT_PORT=false
 
 # 是否在打包时使用cdn替换本地库 替换 true 不替换 false
-VITE_CDN=gzip
+VITE_CDN=false
+
+# 是否启用gzip压缩
+VITE_COMPRESSION=gzip
