--- a/.env.production
+++ b/.env.production
@@ -10,6 +10,9 @@ VITE_APP_URL=http://localhost:8000
 # 如果端口被占用会直接退出，而不是尝试下一个端口
 VITE_STRICT_PORT=false
 
+# 是否启用屏幕转vw适配
+VITE_POST_CSS_PX_TO_VIEWPORT8_PLUGIN=true
+
 # 是否在打包时使用cdn替换本地库 替换 true 不替换 false
 VITE_CDN=false
 
