--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vehicle-monitor",
+  "name": "dashboard-template",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -23,7 +23,7 @@
     "boxen": "^8.0.1",
     "dayjs": "^1.11.13",
     "echarts": "^5.5.1",
-    "eslint": "^9.21.0",
+    "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-define-config": "^2.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -34,8 +34,6 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.3.1",
     "pinia-plugin-persistedstate": "^3.2.3",
-    "postcss": "^8.5.3",
-    "postcss-loader": "^8.1.1",
     "postcss-px-to-viewport-8-plugin": "^1.2.5",
     "prettier": "^3.3.3",
     "rimraf": "^5.0.10",
@@ -60,6 +58,7 @@
     "@iconify/json": "^2.2.310",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "typescript": "~5.7.2",
     "vite": "^6.1.0",
     "vite-plugin-compression": "^0.5.1",
