--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 # 平台本地运行端口号
-VITE_PORT=8800
+VITE_PORT=7000
 
 # 开发环境读取配置文件路径
 VITE_PUBLIC_PATH=/
@@ -7,11 +7,20 @@ VITE_PUBLIC_PATH=/
 # 跨域代理地址
 VITE_APP_URL=http://localhost:8801
 
+# 基础请求路径
+VITE_APP_BASE_API=/api
+
+# 是否使用Mock
+VITE_MOCK_DEV_SERVER=true
+
+# mock地址
+VITE_MOCK_BASE_API=/mock
+
 # 如果端口被占用会直接退出，而不是尝试下一个端口
 VITE_STRICT_PORT=false
 
-# 是否启用屏幕转vw适配
-VITE_POST_CSS_PX_TO_VIEWPORT8_PLUGIN=true
+# 是否启用屏幕转vw适配，可以选择 postcss-px-to-viewport-8-plugin || autofit
+VITE_POST_CSS_PX_TO_VIEWPORT8_PLUGIN="autofit"
 
 # 是否在打包时使用cdn替换本地库 替换 true 不替换 false
 VITE_CDN=false
