--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dashboard-template",
+  "name": "vehicle-monitor",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -19,6 +19,7 @@
     "@unocss/reset": "^66.0.0",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "animate.css": "^4.1.1",
+    "autofit.js": "^3.2.4",
     "axios": "^1.7.9",
     "boxen": "^8.0.1",
     "dayjs": "^1.11.13",
@@ -36,6 +37,7 @@
     "pinia-plugin-persistedstate": "^3.2.3",
     "postcss-px-to-viewport-8-plugin": "^1.2.5",
     "prettier": "^3.3.3",
+    "qs": "^6.14.0",
     "rimraf": "^5.0.10",
     "rollup-plugin-visualizer": "^5.14.0",
     "sass": "^1.77.8",
@@ -47,10 +49,10 @@
     "terser": "^5.39.0",
     "unocss": "^66.0.0",
     "vite-plugin-cdn-import": "^1.0.1",
+    "vite-plugin-fake-server": "^2.2.0",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-vue-inspector": "^5.3.1",
     "vue": "^3.5.13",
-    "vue-echarts": "^7.0.3",
     "vue-eslint-parser": "^9.4.3",
     "vue-router": "^4.4.3",
     "vue-types": "^6.0.0"
