feat: 左侧中间完成

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "forceConsistentCasingInFileNames": true,
     "jsx": "preserve",
     "jsxFactory": "h",
+    "jsxImportSource": "vue",
     "jsxFragmentFactory": "Fragment",
     "paths": {
       "@/*": [
