--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@vueuse/core": "^12.8.2",
     "animate.css": "^4.1.1",
     "autofit.js": "^3.2.4",
-    "axios": "^1.7.9",
+    "axios": "1.8.2",
     "boxen": "^8.0.1",
     "dayjs": "^1.11.13",
     "echarts": "^5.6.0",
