--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@eslint/js": "^9.21.0",
+    "@parcel/watcher": "^2.5.1",
+    "@types/node": "^22.13.10",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
     "@unocss/preset-icons": "^66.0.0",
@@ -25,6 +27,7 @@
     "boxen": "^8.0.1",
     "dayjs": "^1.11.13",
     "echarts": "^5.6.0",
+    "esbuild": "^0.25.1",
     "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-define-config": "^2.1.0",
@@ -36,6 +39,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.3.1",
     "pinia-plugin-persistedstate": "^3.2.3",
+    "postcss": "^8.5.3",
     "postcss-px-to-viewport-8-plugin": "^1.2.5",
     "prettier": "^3.3.3",
     "qs": "^6.14.0",
@@ -54,18 +58,22 @@
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-vue-inspector": "^5.3.1",
     "vue": "^3.5.13",
+    "vue-demi": "^0.14.10",
     "vue-eslint-parser": "^9.4.3",
     "vue-router": "^4.4.3",
     "vue-types": "^6.0.0"
   },
   "devDependencies": {
     "@iconify/json": "^2.2.310",
+    "@types/nprogress": "^0.2.3",
+    "@types/qs": "^6.9.18",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "typescript": "~5.7.2",
     "vite": "^6.1.0",
     "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-style-import": "^2.0.0",
     "vue-tsc": "^2.2.0"
   },
   "engines": {
