--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "@vue/tsconfig": "^0.7.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "typescript": "~5.7.2",
-    "vite": "^6.1.0",
+    "vite": "6.2.6",
     "vite-plugin-compression": "^0.5.1",
     "vue-tsc": "^2.2.0"
   },
