--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,22 +17,12 @@
     "baseUrl": ".",
     "allowJs": false,
     "resolveJsonModule": true,
-    "lib": [
-      "ESNext",
-      "DOM"
-    ],
+    "lib": ["ESNext", "DOM"],
     "paths": {
-      "@/*": [
-        "src/*"
-      ]
-      //      "@build/*": [
-      //        "build/*"
-      //      ]
+      "vue": ["node_modules/vue/dist/vue.esm.js"],
+      "@/*": ["src/*"]
     },
-    "types": [
-      "node",
-      "vite/client"
-    ]
+    "types": ["node", "vite/client"]
   },
   "include": [
     "mock/*.ts",
@@ -42,8 +32,5 @@
     "vite.config.ts",
     "src/**/*.d.ts"
   ],
-  "exclude": [
-    "dist",
-    "node_modules"
-  ]
+  "exclude": ["dist", "node_modules"]
 }
