--- a/package.json
+++ b/package.json
@@ -72,12 +72,12 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "jiti": "^2.4.2",
     "typescript": "~5.7.2",
     "vite": "6.2.6",
     "vite-plugin-compression": "^0.5.1",
-    "vue-tsc": "^2.2.0",
     "vite-plugin-vue-devtools": "^7.7.2",
-    "jiti": "^2.4.2"
+    "vue-tsc": "^2.2.0"
   },
   "engines": {
     "node": "^18.18.0 || ^20.9.0 || >=21.1.0",
