--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -16,13 +16,13 @@ server {
      }
 
      # 后端跨域请求
-     location ~/api/ {
-         proxy_pass http://172.17.0.1:8000;
-         proxy_set_header Host $http_host;
-         proxy_set_header X-Real-IP $remote_addr;
-         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-         proxy_set_header X-Forwarded-Proto $scheme;
-     }
+    #  location ~/api/ {
+    #      proxy_pass http://172.17.0.1:8000;
+    #      proxy_set_header Host $http_host;
+    #      proxy_set_header X-Real-IP $remote_addr;
+    #      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #      proxy_set_header X-Forwarded-Proto $scheme;
+    #  }
 
      error_page  404              404.html;
 
