--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ build-job:
     # 打印编译开始信息
     - echo "Compiling the code..."
     # 使用Maven编译Java项目，跳过测试
-    - npm i -g pnpm && pnpm i && pnpm build
+    - npm i -g pnpm && pnpm i
     # 打印编译完成信息
     - echo "Compile complete."
     # 从Docker Hub拉取OpenJDK基础镜像
@@ -29,7 +29,8 @@ build-job:
     # 打印拉取完成信息
     - echo "docker pull complete."
     # 使用Dockerfile构建Docker镜像，并打上标签
-    - cd docker && docker build -f Dockerfile -t $CONTAINER_NAME:$DOCKER_TAG .
+    - ls
+    - pnpm build && cd docker && docker build -f Dockerfile -t $CONTAINER_NAME:$DOCKER_TAG .
     # 打印构建成功信息
     - echo "Application successfully deployed."
 
